--- a/SwampAttack/proj.android/assets/image/bat.plist
+++ b/SwampAttack/proj.android/assets/image/bat.plist
@@ -7,11 +7,11 @@
             <key>bat_Electric0001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,382},{118,84}}</string>
+                <string>{{244,362},{118,84}}</string>
                 <key>offset</key>
                 <string>{1,-3}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{22,31},{118,84}}</string>
                 <key>sourceSize</key>
@@ -20,11 +20,11 @@
             <key>bat_Electric0002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{92,360},{118,84}}</string>
+                <string>{{2,350},{118,84}}</string>
                 <key>offset</key>
                 <string>{1,-3}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{22,31},{118,84}}</string>
                 <key>sourceSize</key>
@@ -33,7 +33,7 @@
             <key>bat_attack0001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{194,2},{140,84}}</string>
+                <string>{{2,174},{140,84}}</string>
                 <key>offset</key>
                 <string>{-2,-2}</string>
                 <key>rotated</key>
@@ -46,11 +46,11 @@
             <key>bat_attack0002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,252},{128,88}}</string>
+                <string>{{144,205},{128,88}}</string>
                 <key>offset</key>
                 <string>{-3,-5}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{13,31},{128,88}}</string>
                 <key>sourceSize</key>
@@ -59,7 +59,7 @@
             <key>bat_attack0003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{302,328},{116,92}}</string>
+                <string>{{122,381},{116,92}}</string>
                 <key>offset</key>
                 <string>{-1,-8}</string>
                 <key>rotated</key>
@@ -72,7 +72,7 @@
             <key>bat_attack0004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{106,104}}</string>
+                <string>{{403,2},{106,104}}</string>
                 <key>offset</key>
                 <string>{-1,-6}</string>
                 <key>rotated</key>
@@ -85,11 +85,11 @@
             <key>bat_attack0005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{110,2},{148,82}}</string>
+                <string>{{362,108},{148,82}}</string>
                 <key>offset</key>
                 <string>{6,-3}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{12,32},{148,82}}</string>
                 <key>sourceSize</key>
@@ -98,7 +98,7 @@
             <key>bat_attack0006.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{344,172},{112,98}}</string>
+                <string>{{364,428},{112,98}}</string>
                 <key>offset</key>
                 <string>{-3,-9}</string>
                 <key>rotated</key>
@@ -111,7 +111,7 @@
             <key>bat_attack0007.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{178,414},{90,110}}</string>
+                <string>{{240,448},{90,110}}</string>
                 <key>offset</key>
                 <string>{8,-13}</string>
                 <key>rotated</key>
@@ -124,7 +124,7 @@
             <key>bat_attack0008.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{228,228},{114,98}}</string>
+                <string>{{396,328},{114,98}}</string>
                 <key>offset</key>
                 <string>{-2,-8}</string>
                 <key>rotated</key>
@@ -137,11 +137,11 @@
             <key>bat_attack0009.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,108},{142,82}}</string>
+                <string>{{2,90},{142,82}}</string>
                 <key>offset</key>
                 <string>{9,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{18,29},{142,82}}</string>
                 <key>sourceSize</key>
@@ -150,11 +150,11 @@
             <key>bat_attack0010.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{420,272},{106,90}}</string>
+                <string>{{120,475},{106,90}}</string>
                 <key>offset</key>
                 <string>{-1,2}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{26,23},{106,90}}</string>
                 <key>sourceSize</key>
@@ -163,7 +163,7 @@
             <key>bat_attack0011.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{336,2},{120,82}}</string>
+                <string>{{274,278},{120,82}}</string>
                 <key>offset</key>
                 <string>{-2,-1}</string>
                 <key>rotated</key>
@@ -173,10 +173,62 @@
                 <key>sourceSize</key>
                 <string>{160,140}</string>
             </dict>
+            <key>bat_bullet0001.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{198,57},{162,60}}</string>
+                <key>offset</key>
+                <string>{-1,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{162,60}}</string>
+                <key>sourceSize</key>
+                <string>{164,60}</string>
+            </dict>
+            <key>bat_bullet0002.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,33},{194,55}}</string>
+                <key>offset</key>
+                <string>{-1,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{194,55}}</string>
+                <key>sourceSize</key>
+                <string>{196,55}</string>
+            </dict>
+            <key>bat_bullet0003.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{204,2},{197,53}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{1,0},{197,53}}</string>
+                <key>sourceSize</key>
+                <string>{199,53}</string>
+            </dict>
+            <key>bat_bullet0004.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,2},{200,29}}</string>
+                <key>offset</key>
+                <string>{-1,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{200,29}}</string>
+                <key>sourceSize</key>
+                <string>{202,29}</string>
+            </dict>
             <key>bat_fly0001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{86,152},{140,84}}</string>
+                <string>{{146,119},{140,84}}</string>
                 <key>offset</key>
                 <string>{-2,-2}</string>
                 <key>rotated</key>
@@ -189,7 +241,7 @@
             <key>bat_fly0002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{182,328},{118,84}}</string>
+                <string>{{124,295},{118,84}}</string>
                 <key>offset</key>
                 <string>{1,-3}</string>
                 <key>rotated</key>
@@ -202,7 +254,7 @@
             <key>bat_fly0003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{408,422},{88,98}}</string>
+                <string>{{2,522},{88,98}}</string>
                 <key>offset</key>
                 <string>{1,0}</string>
                 <key>rotated</key>
@@ -215,7 +267,7 @@
             <key>bat_fly0004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{290,422},{116,84}}</string>
+                <string>{{2,436},{116,84}}</string>
                 <key>offset</key>
                 <string>{2,-1}</string>
                 <key>rotated</key>
@@ -228,11 +280,11 @@
             <key>bat_fly0005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{314,88},{134,82}}</string>
+                <string>{{428,192},{134,82}}</string>
                 <key>offset</key>
                 <string>{0,2}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{13,27},{134,82}}</string>
                 <key>sourceSize</key>
@@ -241,11 +293,11 @@
             <key>bat_fly0006.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{92,238},{120,88}}</string>
+                <string>{{2,260},{120,88}}</string>
                 <key>offset</key>
                 <string>{-5,1}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{15,25},{120,88}}</string>
                 <key>sourceSize</key>
@@ -254,11 +306,11 @@
             <key>bat_fly0007.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{228,88},{138,84}}</string>
+                <string>{{288,192},{138,84}}</string>
                 <key>offset</key>
                 <string>{0,2}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{11,26},{138,84}}</string>
                 <key>sourceSize</key>
@@ -272,9 +324,9 @@
             <key>realTextureFileName</key>
             <string>bat.png</string>
             <key>size</key>
-            <string>{512,512}</string>
+            <string>{512,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:abfab699060ed992c1830e192151f732:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:06af86840be54738486d0c641a215227:1/1$</string>
             <key>textureFileName</key>
             <string>bat.png</string>
         </dict>
