--- a/SwampAttack/proj.android/assets/image/daoju7.plist
+++ b/SwampAttack/proj.android/assets/image/daoju7.plist
@@ -7,7 +7,7 @@
             <key>daoju70001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{386,450},{62,68}}</string>
+                <string>{{346,594},{62,68}}</string>
                 <key>offset</key>
                 <string>{1,0}</string>
                 <key>rotated</key>
@@ -20,11 +20,11 @@
             <key>daoju70002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{454,218},{70,42}}</string>
+                <string>{{418,520},{70,42}}</string>
                 <key>offset</key>
                 <string>{5,-1}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{20,30},{70,42}}</string>
                 <key>sourceSize</key>
@@ -33,7 +33,7 @@
             <key>daoju70003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{164,550},{66,66}}</string>
+                <string>{{346,658},{66,66}}</string>
                 <key>offset</key>
                 <string>{4,-5}</string>
                 <key>rotated</key>
@@ -46,11 +46,11 @@
             <key>daoju70004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{456,146},{44,70}}</string>
+                <string>{{418,474},{44,70}}</string>
                 <key>offset</key>
                 <string>{2,-6}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{30,21},{44,70}}</string>
                 <key>sourceSize</key>
@@ -59,7 +59,7 @@
             <key>daoju70005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{386,384},{68,64}}</string>
+                <string>{{418,564},{68,64}}</string>
                 <key>offset</key>
                 <string>{2,-3}</string>
                 <key>rotated</key>
@@ -72,11 +72,11 @@
             <key>daoju70006.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{456,2},{70,50}}</string>
+                <string>{{436,376},{70,50}}</string>
                 <key>offset</key>
                 <string>{1,-3}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{16,28},{70,50}}</string>
                 <key>sourceSize</key>
@@ -85,7 +85,7 @@
             <key>daoju70007.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{386,514},{66,66}}</string>
+                <string>{{416,630},{66,66}}</string>
                 <key>offset</key>
                 <string>{-7,-2}</string>
                 <key>rotated</key>
@@ -98,20 +98,98 @@
             <key>daoju70008.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{456,74},{44,70}}</string>
+                <string>{{418,428},{44,70}}</string>
                 <key>offset</key>
                 <string>{-3,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{25,15},{44,70}}</string>
                 <key>sourceSize</key>
                 <string>{100,100}</string>
             </dict>
+            <key>daoju7_dian0001.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,160},{216,76}}</string>
+                <key>offset</key>
+                <string>{0,1}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{2,2},{216,76}}</string>
+                <key>sourceSize</key>
+                <string>{220,82}</string>
+            </dict>
+            <key>daoju7_dian0002.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{346,726},{130,36}}</string>
+                <key>offset</key>
+                <string>{-1,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{2,2},{130,36}}</string>
+                <key>sourceSize</key>
+                <string>{136,40}</string>
+            </dict>
+            <key>daoju7_dian0003.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,2},{242,156}}</string>
+                <key>offset</key>
+                <string>{-11,-4}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{20,26},{242,156}}</string>
+                <key>sourceSize</key>
+                <string>{304,200}</string>
+            </dict>
+            <key>daoju7_dian0004.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,434},{184,154}}</string>
+                <key>offset</key>
+                <string>{-26,7}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{34,16},{184,154}}</string>
+                <key>sourceSize</key>
+                <string>{304,200}</string>
+            </dict>
+            <key>daoju7_dian0005.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{436,210},{164,74}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{2,2},{164,74}}</string>
+                <key>sourceSize</key>
+                <string>{168,78}</string>
+            </dict>
+            <key>daoju7_dian0006.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{184,744},{114,52}}</string>
+                <key>offset</key>
+                <string>{1,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{4,2},{114,52}}</string>
+                <key>sourceSize</key>
+                <string>{120,56}</string>
+            </dict>
             <key>lighting0001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,408},{148,160}}</string>
+                <string>{{184,594},{148,160}}</string>
                 <key>offset</key>
                 <string>{2,-10}</string>
                 <key>rotated</key>
@@ -124,7 +202,7 @@
             <key>lighting0002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{204,384},{164,180}}</string>
+                <string>{{2,590},{164,180}}</string>
                 <key>offset</key>
                 <string>{-3,-5}</string>
                 <key>rotated</key>
@@ -137,7 +215,7 @@
             <key>lighting0003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{240,2},{184,214}}</string>
+                <string>{{220,210},{184,214}}</string>
                 <key>offset</key>
                 <string>{2,5}</string>
                 <key>rotated</key>
@@ -150,7 +228,7 @@
             <key>lighting0004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,210},{200,196}}</string>
+                <string>{{216,396},{200,196}}</string>
                 <key>offset</key>
                 <string>{1,9}</string>
                 <key>rotated</key>
@@ -163,7 +241,7 @@
             <key>lighting0005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{240,188},{194,212}}</string>
+                <string>{{2,238},{194,212}}</string>
                 <key>offset</key>
                 <string>{-17,7}</string>
                 <key>rotated</key>
@@ -176,7 +254,7 @@
             <key>lighting0006.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{206,236}}</string>
+                <string>{{246,2},{206,236}}</string>
                 <key>offset</key>
                 <string>{-14,7}</string>
                 <key>rotated</key>
@@ -196,7 +274,7 @@
             <key>size</key>
             <string>{512,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:e08f13b45385843cbe9f30e9755a1039:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:0e46ed4ead54f0d658930aa142238899:1/1$</string>
             <key>textureFileName</key>
             <string>daoju7.png</string>
         </dict>
