--- a/SwampAttack/proj.android/assets/image/qiang10.plist
+++ b/SwampAttack/proj.android/assets/image/qiang10.plist
@@ -4,10 +4,49 @@
     <dict>
         <key>frames</key>
         <dict>
+            <key>qiang10_bullet0001.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{516,14},{143,40}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{3,1},{143,40}}</string>
+                <key>sourceSize</key>
+                <string>{149,42}</string>
+            </dict>
+            <key>qiang10_bullet0002.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{582,2},{244,21}}</string>
+                <key>offset</key>
+                <string>{-1,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{1,0},{244,21}}</string>
+                <key>sourceSize</key>
+                <string>{248,21}</string>
+            </dict>
+            <key>qiang10_bullet0003.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,2},{578,10}}</string>
+                <key>offset</key>
+                <string>{-1,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{10,12},{578,10}}</string>
+                <key>sourceSize</key>
+                <string>{600,34}</string>
+            </dict>
             <key>reload_qiang100001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{524,118},{124,166}}</string>
+                <string>{{2,176},{124,166}}</string>
                 <key>offset</key>
                 <string>{-15,-2}</string>
                 <key>rotated</key>
@@ -20,7 +59,7 @@
             <key>reload_qiang100002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{354,2},{126,168}}</string>
+                <string>{{176,14},{126,168}}</string>
                 <key>offset</key>
                 <string>{-14,-1}</string>
                 <key>rotated</key>
@@ -33,7 +72,7 @@
             <key>reload_qiang100003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{524,2},{114,168}}</string>
+                <string>{{346,14},{114,168}}</string>
                 <key>offset</key>
                 <string>{-24,-1}</string>
                 <key>rotated</key>
@@ -46,7 +85,7 @@
             <key>reload_qiang100004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{694,2},{100,168}}</string>
+                <string>{{346,130},{100,168}}</string>
                 <key>offset</key>
                 <string>{-34,-1}</string>
                 <key>rotated</key>
@@ -59,7 +98,7 @@
             <key>reload_qiang100005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{338,250},{106,166}}</string>
+                <string>{{512,269},{106,166}}</string>
                 <key>offset</key>
                 <string>{-28,-2}</string>
                 <key>rotated</key>
@@ -72,7 +111,7 @@
             <key>reload_qiang100006.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{690,354},{116,166}}</string>
+                <string>{{170,268},{116,166}}</string>
                 <key>offset</key>
                 <string>{-22,-2}</string>
                 <key>rotated</key>
@@ -85,7 +124,7 @@
             <key>reload_qiang100007.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{522,244},{118,166}}</string>
+                <string>{{344,232},{118,166}}</string>
                 <key>offset</key>
                 <string>{-20,-2}</string>
                 <key>rotated</key>
@@ -98,7 +137,7 @@
             <key>reload_qiang100008.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{354,130},{118,166}}</string>
+                <string>{{558,149},{118,166}}</string>
                 <key>offset</key>
                 <string>{-18,-2}</string>
                 <key>rotated</key>
@@ -111,7 +150,7 @@
             <key>reload_qiang100009.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,164},{114,166}}</string>
+                <string>{{2,302},{114,166}}</string>
                 <key>offset</key>
                 <string>{-20,-2}</string>
                 <key>rotated</key>
@@ -124,7 +163,7 @@
             <key>reload_qiang100010.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{170,164},{110,166}}</string>
+                <string>{{726,164},{110,166}}</string>
                 <key>offset</key>
                 <string>{-23,-2}</string>
                 <key>rotated</key>
@@ -137,7 +176,7 @@
             <key>reload_qiang100011.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{168,400},{116,164}}</string>
+                <string>{{504,377},{116,164}}</string>
                 <key>offset</key>
                 <string>{-19,-3}</string>
                 <key>rotated</key>
@@ -150,7 +189,7 @@
             <key>reload_qiang100012.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{336,358},{120,164}}</string>
+                <string>{{680,276},{120,164}}</string>
                 <key>offset</key>
                 <string>{-18,-3}</string>
                 <key>rotated</key>
@@ -163,7 +202,7 @@
             <key>shoot_qiang100001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,402},{128,162}}</string>
+                <string>{{336,476},{128,162}}</string>
                 <key>offset</key>
                 <string>{-15,-4}</string>
                 <key>rotated</key>
@@ -176,7 +215,7 @@
             <key>shoot_qiang100002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{166,518},{138,160}}</string>
+                <string>{{670,398},{138,160}}</string>
                 <key>offset</key>
                 <string>{-14,-5}</string>
                 <key>rotated</key>
@@ -189,7 +228,7 @@
             <key>shoot_qiang100003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{864,2},{136,158}}</string>
+                <string>{{662,538},{136,158}}</string>
                 <key>offset</key>
                 <string>{-14,-6}</string>
                 <key>rotated</key>
@@ -202,7 +241,7 @@
             <key>shoot_qiang100004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,668},{134,158}}</string>
+                <string>{{494,631},{134,158}}</string>
                 <key>offset</key>
                 <string>{-15,-6}</string>
                 <key>rotated</key>
@@ -215,7 +254,7 @@
             <key>shoot_qiang100005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{176,160}}</string>
+                <string>{{828,2},{176,160}}</string>
                 <key>offset</key>
                 <string>{1,-5}</string>
                 <key>rotated</key>
@@ -228,7 +267,7 @@
             <key>shoot_qiang100006.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{180,2},{172,160}}</string>
+                <string>{{2,14},{172,160}}</string>
                 <key>offset</key>
                 <string>{2,-5}</string>
                 <key>rotated</key>
@@ -241,7 +280,7 @@
             <key>shoot_qiang100007.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{862,140},{152,160}}</string>
+                <string>{{846,328},{152,160}}</string>
                 <key>offset</key>
                 <string>{-6,-5}</string>
                 <key>rotated</key>
@@ -254,7 +293,7 @@
             <key>shoot_qiang100008.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,532},{134,160}}</string>
+                <string>{{500,495},{134,160}}</string>
                 <key>offset</key>
                 <string>{-14,-5}</string>
                 <key>rotated</key>
@@ -267,7 +306,7 @@
             <key>shoot_qiang100009.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{666,472},{132,160}}</string>
+                <string>{{332,606},{132,160}}</string>
                 <key>offset</key>
                 <string>{-15,-5}</string>
                 <key>rotated</key>
@@ -280,11 +319,11 @@
             <key>shoot_qiang100010.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{860,294},{128,162}}</string>
+                <string>{{894,164},{128,162}}</string>
                 <key>offset</key>
                 <string>{-15,-4}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{11,13},{128,162}}</string>
                 <key>sourceSize</key>
@@ -293,7 +332,7 @@
             <key>wait_qiang100001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,280},{120,164}}</string>
+                <string>{{2,418},{120,164}}</string>
                 <key>offset</key>
                 <string>{-17,-3}</string>
                 <key>rotated</key>
@@ -306,7 +345,7 @@
             <key>wait_qiang100002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{334,480},{118,162}}</string>
+                <string>{{2,540},{118,162}}</string>
                 <key>offset</key>
                 <string>{-16,-4}</string>
                 <key>rotated</key>
@@ -319,7 +358,7 @@
             <key>wait_qiang100003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{164,658},{116,160}}</string>
+                <string>{{832,482},{116,160}}</string>
                 <key>offset</key>
                 <string>{-15,-5}</string>
                 <key>rotated</key>
@@ -332,7 +371,7 @@
             <key>wait_qiang100004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{328,600},{116,160}}</string>
+                <string>{{2,660},{116,160}}</string>
                 <key>offset</key>
                 <string>{-15,-5}</string>
                 <key>rotated</key>
@@ -345,7 +384,7 @@
             <key>wait_qiang100005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{498,484},{116,160}}</string>
+                <string>{{166,630},{116,160}}</string>
                 <key>offset</key>
                 <string>{-15,-5}</string>
                 <key>rotated</key>
@@ -358,7 +397,7 @@
             <key>wait_qiang100006.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{502,364},{118,162}}</string>
+                <string>{{168,510},{118,162}}</string>
                 <key>offset</key>
                 <string>{-15,-4}</string>
                 <key>rotated</key>
@@ -371,7 +410,7 @@
             <key>wait_qiang100007.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{170,276},{122,164}}</string>
+                <string>{{170,386},{122,164}}</string>
                 <key>offset</key>
                 <string>{-17,-3}</string>
                 <key>rotated</key>
@@ -384,7 +423,7 @@
             <key>wait_qiang100008.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{694,104},{124,166}}</string>
+                <string>{{176,142},{124,166}}</string>
                 <key>offset</key>
                 <string>{-18,-2}</string>
                 <key>rotated</key>
@@ -397,7 +436,7 @@
             <key>wait_qiang100009.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{692,230},{122,166}}</string>
+                <string>{{558,25},{122,166}}</string>
                 <key>offset</key>
                 <string>{-18,-2}</string>
                 <key>rotated</key>
@@ -410,7 +449,7 @@
             <key>wait_qiang100010.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{858,424},{122,164}}</string>
+                <string>{{338,352},{122,164}}</string>
                 <key>offset</key>
                 <string>{-18,-3}</string>
                 <key>rotated</key>
@@ -430,7 +469,7 @@
             <key>size</key>
             <string>{1024,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:1ae5d85005452f0b69f7417b3ef04dbb:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:4422f238fda18a157f6c521c1f14328d:1/1$</string>
             <key>textureFileName</key>
             <string>qiang10.png</string>
         </dict>
